# omef

./: .gitmodules  CMakeLists.txt  README.md  config.mk  config.mk.ESP8266  config.mk.STM32F0  config.mk.STM32F1  config.mk.nRF52  makefile  makefile-old.mk
cmake/: config-esp32.cmake  config-esp8266.cmake  config-nrf52.cmake  config-rp2040.cmake  config-stm32f0.cmake  config-stm32f1.cmake  config-stm32f4.cmake  config-x86.cmake  toolchain-arm-gcc-cortex.cmake  toolchain-xtensa-lx106-gcc.cmake
cmake/debug-probes/: esptool.cmake  jlink.cmake  openocd.cmake  st-link.cmake
src/: main.cpp
src/common/: freertos_wrappers.hpp
src/drv/: CMakeLists.txt  makefile
src/drv/dataflash/: dataflash.cpp  dataflash.example.cpp  dataflash.hpp
src/drv/dht/: dht.example.cpp
src/drv/di/: di.cpp  di.example.cpp  di.hpp
src/drv/ds18b20/: ds18b20.example.cpp
src/drv/enc/: enc.example.cpp
src/drv/gps/: nmea.example.cpp
src/drv/hd44780/: hd44780.cpp  hd44780.example.cpp
src/drv/nrf24l01/: nrf24l01.cpp  nrf24l01.example_read_pipe.cpp  nrf24l01.example_write.cpp  nrf24l01.hpp  nrf24l01_priv.hpp
src/drv/nrf24l01/examples/: receiver.cpp  receiver_ack_payload.cpp  transmitter.cpp  transmitter_ack_payload.cpp
src/drv/onewire/: onewire.example.cpp
src/drv/sd/: sd.cpp  sd.example.cpp  sd_spi.cpp
src/drv/singlewire/: singlewire.cpp  singlewire.example.cpp
src/hal/ESP32/: CMakeLists.txt  esp-idf.patch
src/hal/ESP32/gpio/: gpio.cpp  gpio.hpp
src/hal/ESP8266/: CMakeLists.txt  ESP8266_RTOS_SDK.patch  makefile
src/hal/ESP8266/ESP8266_RTOS_SDK/: makefile
src/hal/ESP8266/ESP8266_RTOS_SDK/components/esp8266/ld/: esp8266.common.ld  esp8266.ld
src/hal/ESP8266/ESP8266_RTOS_SDK/components/esp8266/source/: startup.c
src/hal/ESP8266/adc/: adc.cpp  adc.hpp
src/hal/ESP8266/gpio/: gpio.cpp  gpio.example.cpp  gpio.hpp  gpio_priv.hpp
src/hal/ESP8266/spi/: spi.cpp  spi.example.cpp  spi.hpp
src/hal/ESP8266/tim/: tim.cpp  tim.example.cpp  tim.hpp
src/hal/ESP8266/uart/: uart.cpp  uart.example.cpp  uart.hpp
src/hal/RP2040/: CMakeLists.txt  example.cpp
src/hal/STM32F0/: CMakeLists.txt  STM32F072RBTx_FLASH.ld  makefile
src/hal/STM32F0/CMSIS/: CMakeLists.txt
src/hal/STM32F0/dma/: dma.cpp  dma.hpp  dma_priv.hpp
src/hal/STM32F0/exti/: exti.cpp  exti.example.cpp
src/hal/STM32F0/gpio/: gpio.cpp  gpio.example.cpp  gpio.hpp  gpio_priv.hpp
src/hal/STM32F0/rcc/: rcc.cpp
src/hal/STM32F0/spi/: spi.cpp  spi.example.cpp  spi.hpp  spi_priv.hpp
src/hal/STM32F0/systick/: systick.cpp  systick.hpp
src/hal/STM32F0/tim/: tim.cpp  tim.example.cpp  tim.hpp  tim_priv.hpp
src/hal/STM32F0/uart/: uart.cpp  uart.example.cpp  uart.hpp  uart_priv.hpp
src/hal/STM32F0/wdt/: wdt.cpp  wdt.example.cpp
src/hal/STM32F1/: CMakeLists.txt  STM32F100XB_FLASH.ld  makefile
src/hal/STM32F1/CMSIS/: CMakeLists.txt
src/hal/STM32F1/CMSIS/DSP/: CMakeLists.txt
src/hal/STM32F1/adc/: adc.cpp  adc.example.cpp  adc.hpp  adc_priv.hpp
src/hal/STM32F1/dac/: dac.cpp  dac.example.cpp  dac.hpp
src/hal/STM32F1/dma/: dma.cpp  dma.hpp  dma_priv.hpp
src/hal/STM32F1/exti/: exti.cpp  exti.example.cpp
src/hal/STM32F1/gpio/: gpio.cpp  gpio.example.cpp  gpio.hpp  gpio_priv.hpp
src/hal/STM32F1/pwm/: pwm.cpp  pwm.example.cpp  pwm.hpp  pwm_priv.hpp
src/hal/STM32F1/rcc/: rcc.cpp
src/hal/STM32F1/spi/: spi.cpp  spi.example.cpp  spi.hpp  spi_priv.hpp
src/hal/STM32F1/systick/: systick.cpp
src/hal/STM32F1/tim/: tim.cpp  tim.example.cpp  tim_priv.hpp
src/hal/STM32F1/uart/: uart.cpp  uart.example.cpp  uart.hpp  uart_priv.hpp
src/hal/STM32F1/wdt/: wdt.cpp  wdt.example.cpp  wdt.hpp
src/hal/STM32F4/: CMakeLists.txt
src/hal/STM32F4/CMSIS/: CMakeLists.txt
src/hal/STM32F4/CMSIS/DSP/: CMakeLists.txt
src/hal/STM32F4/dac/: dac.cpp  dac.example.cpp
src/hal/STM32F4/dma/: dma.cpp  dma.hpp  dma_priv.hpp
src/hal/STM32F4/exti/: exti.cpp  exti.example.cpp  exti.hpp
src/hal/STM32F4/gpio/: gpio.cpp  gpio.example.cpp  gpio.hpp  gpio_priv.hpp
src/hal/STM32F4/i2c/: i2c.cpp  i2c.example.cpp  i2c.hpp  i2c_priv.hpp
src/hal/STM32F4/pwm/: pwm.cpp  pwm.example.cpp  pwm.hpp  pwm_priv.hpp
src/hal/STM32F4/rcc/: rcc.cpp  rcc.hpp
src/hal/STM32F4/rtc/: rtc.cpp  rtc.example.cpp  rtc.hpp
src/hal/STM32F4/spi/: spi.cpp  spi.example.cpp  spi.hpp  spi_priv.hpp
src/hal/STM32F4/systick/: systick.cpp  systick.hpp
src/hal/STM32F4/tim/: tim.cpp  tim.example.cpp  tim.hpp  tim_priv.hpp
src/hal/STM32F4/uart/: uart.cpp  uart.example.cpp  uart.hpp  uart_priv.hpp
src/hal/STM32F4/wdt/: wdt.cpp  wdt.example.cpp
src/hal/nRF/: CMakeLists.txt  makefile
src/hal/nRF/gpio/: gpio.cpp  gpio.example.cpp  gpio.hpp
src/hal/nRF/nRF5_SDK/: CMakeLists.txt  makefile  sdk_config.h
src/hal/nRF/nRF5_SDK/config/nrf52832/config/: sdk_config.h
src/hal/x86/: CMakeLists.txt
src/hal/x86/gpio/: gpio.cpp  gpio.example.cpp  gpio.hpp
src/ul/fatfs_diskio/: CMakeLists.txt  fatfs_diskio.example.cpp
src/ul/list/: list.example.cpp
src/ul/syslog/: syslog.cpp  syslog.example.cpp  syslog.hpp
